--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,26 +1,16 @@
-<header>
-    {% if user.is_authenticated %}
-        <nav>
-            <ul class="nav_links left">
-                <li><a href="/profile">Мой профиль</a></li>
-                <li><a href="/dm">Сообщения</a></li>
-                <li><a href="/settings">Настройки</a></li>
-                <li><a href="/friends">Друзья</a></li>
-                <li><a href="/search">Поиск</a></li>
-            </ul>
-        </nav>
-        <nav>
-            <ul class="nav_logout">
-                <li><a>Hello, {{user}}</a></li>
-                <li><a href="/logout"><button>Выйти</button></a></li>
-            </ul>
-        </nav>
-    {% else %}
-        <nav>
-            <ul class="nav_links">
-                <li><a href="/login"><button>Войти</button></a></li>
-                <li><a href="/register"><button>Регистрация</button></a></li>
-            </ul>
-        </nav>
-    {% endif %}
-</header>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container">
+        <div class="d-flex">
+            <li class="nav-item px-2">
+                <a class="navbar-link" href="/profile">Мой профиль</a>
+            </li>
+            <a class="navbar-link" href="/dm">Сообщения</a>
+            <a class="navbar-link" href="/friends">Друзья</a>
+            <a class="navbar-link" href="/search">Поиск</a>
+        </div>
+        <div class="text-end">
+            <a class="navbar-brand">Hello, {{user}}</a>
+            <a class="navbar-brand" href="/logout">Выйти</a>
+        </div>
+    </div>
+</nav>
